tests/fixtures/invalid/pow_set_bool_int.py
# Cannot call pow() with Set[int], Bool, Int
x = pow({1, 2, 3}, True, 1)
